crates/runtime/tests/search/snapshots/integration_models__search__cayenne_with_zero_results-s3_vectors_fallback-no_text_engine-dataset-basic_megascience_vector_search_sql_projection_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, question, subject, trunc(_score, 3) as _score FROM vector_search(qs, 'second', answer) order by _score desc, id LIMIT 4"
---
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                             |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: _score DESC NULLS FIRST, vector_search(qs, Utf8("second"), answer).id ASC NULLS LAST, fetch=4                                                                                                                                                                                              |
|               |   Projection: vector_search(qs, Utf8("second"), answer).id, vector_search(qs, Utf8("second"), answer).answer, vector_search(qs, Utf8("second"), answer).question, vector_search(qs, Utf8("second"), answer).subject, trunc(vector_search(qs, Utf8("second"), answer)._score, Int64(3)) AS _score |
|               |     TableScan: vector_search(qs, Utf8("second"), answer) projection=[_score, answer, id, question, subject]                                                                                                                                                                                      |
| physical_plan | SortPreservingMergeExec: [_score@4 DESC, id@0 ASC NULLS LAST], fetch=4                                                                                                                                                                                                                           |
|               |   SortExec: TopK(fetch=4), expr=[_score@4 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                                                               |
|               |     ProjectionExec: expr=[id@0 as id, answer@2 as answer, question@3 as question, subject@4 as subject, trunc(_score@1, 3) as _score]                                                                                                                                                            |
|               |       HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@1)], projection=[id@0, _score@1, answer@2, question@4, subject@5]                                                                                                                        |
|               |         CoalescePartitionsExec                                                                                                                                                                                                                                                                   |
|               |           ProjectionExec: expr=[CAST(key@0 AS Int64) as id, 1 - distance@1 as _score]                                                                                                                                                                                                            |
|               |             BytesProcessedExec                                                                                                                                                                                                                                                                   |
|               |               RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                                               |
|               |                 S3VectorsQueryExec (INDEX_NAME_1): limit=100                                                                                                                                                                                                                                     |
|               |         RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                                                     |
|               |           SchemaCastScanExec                                                                                                                                                                                                                                                                     |
|               |             FallbackOnZeroResultsScanExec                                                                                                                                                                                                                                                        |
|               |               CayenneAccelerationExec: snapshots_scanned=0, files_scanned=0                                                                                                                                                                                                                      |
|               |                 BytesProcessedExec                                                                                                                                                                                                                                                               |
|               |                   EmptyExec                                                                                                                                                                                                                                                                      |
|               |                                                                                                                                                                                                                                                                                                  |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
