crates/runtime/tests/search/snapshots/integration_models__search__cayenne_with_zero_results-s3_vectors_fallback-no_text_engine-dataset-basic_megascience_vector_search_sql_random_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT subject FROM vector_search(qs, 'second', answer) order by _score desc LIMIT 4"
---
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                      |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: vector_search(qs, Utf8("second"), answer).subject                                                                                                             |
|               |   Sort: vector_search(qs, Utf8("second"), answer)._score DESC NULLS FIRST, fetch=4                                                                                        |
|               |     Projection: vector_search(qs, Utf8("second"), answer).subject, vector_search(qs, Utf8("second"), answer)._score                                                       |
|               |       TableScan: vector_search(qs, Utf8("second"), answer) projection=[_score, subject]                                                                                   |
| physical_plan | ProjectionExec: expr=[subject@0 as subject]                                                                                                                               |
|               |   SortPreservingMergeExec: [_score@1 DESC], fetch=4                                                                                                                       |
|               |     SortExec: TopK(fetch=4), expr=[_score@1 DESC], preserve_partitioning=[true]                                                                                           |
|               |       ProjectionExec: expr=[subject@2 as subject, _score@1 as _score]                                                                                                     |
|               |         HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@0)], projection=[id@0, _score@1, subject@3]                     |
|               |           CoalescePartitionsExec                                                                                                                                          |
|               |             ProjectionExec: expr=[CAST(key@0 AS Int64) as id, 1 - distance@1 as _score]                                                                                   |
|               |               BytesProcessedExec                                                                                                                                          |
|               |                 RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                      |
|               |                   S3VectorsQueryExec (INDEX_NAME_1): limit=100                                                                                                            |
|               |           RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                            |
|               |             SchemaCastScanExec                                                                                                                                            |
|               |               FallbackOnZeroResultsScanExec                                                                                                                               |
|               |                 CayenneAccelerationExec: snapshots_scanned=0, files_scanned=0                                                                                             |
|               |                   BytesProcessedExec                                                                                                                                      |
|               |                     EmptyExec                                                                                                                                             |
|               |                                                                                                                                                                           |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
